# mlx-gen-parity

./: .gitignore  LICENSE  Makefile  README.md  RELEASE_NOTES.md  mlx_gen_parity.md  mlx_genkit.md  pyproject.toml
examples/: example_trainer.py  quickstart.py  structured_generation.py
mlx_gen_parity/: __init__.py  adapters.py  api.py  cli.py  diagnostics.py  injection.py  loader.py  training.py  utils.py
mlx_gen_parity/data/: loader.py
mlx_gen_parity/tests/: harness.py  parity_hf.py  utils_demo.py
mlx_genkit/: __init__.py  api.py  cli.py  config.py  eval.py  interop.py  loader.py  sampling.py  training.py  utils.py
mlx_genkit/backends/: __init__.py  base.py  mlx_backend.py  transformers_backend.py  vllm_backend.py
mlx_genkit/rl/: ppo.py  utils.py
mlx_genkit/structure/: adherence.py  batch.py  dsl.py  grammar.py  logs.py  result.py  semantic.py  stream.py  validators.py
mlx_genkit/tests/: harness.py  parity_hf.py  parity_suite.py  perf_bench.py  test_eval_unit.py  test_structure_unit.py  utils_demo.py
scripts/: bump_version.py
